subida para segunda entrega

--- a/src/components/NavBar/navBar.css
+++ b/src/components/NavBar/navBar.css
@@ -23,7 +23,7 @@
     align-items: center;
 }
 
-.nav__link {
+.categorias {
     color: white;
     font-size: 18px;
     text-transform: uppercase;
